// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module-string-names-export.js [espree] format 1`] = `
"Unexpected token , (7:18)
  5 | export { foo3, bar as \\"foo4\\" };
  6 | export { \\"學而時習之，不亦說乎？\\", \\"吾道一以貫之。\\" as \\"忠恕。\\" } from \\"Confucius\\";
> 7 | export * as \\"foo\\", { default as \\"quux\\" } from \\"module-b\\";
    |                  ^
  8 | export { \\"smile4\\" } from \\"./emojis.js\\";
  9 |"
`;

exports[`module-string-names-export.js [meriyah] format 1`] = `
"[1:26]: Only a identifier can be used to indicate alias (1:26)
> 1 | export { smile as \\"smile1\\" } from \\"./emojis.js\\";
    |                          ^
  2 | export { \\"smile\\" as smile2 } from \\"./emojis.js\\";
  3 | export { \\"smile\\" as \\"smile3\\" } from \\"./emojis.js\\";
  4 | export { foo1, bar as \\"foo2\\" } from \\"./emojis.js\\";"
`;

exports[`module-string-names-export.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export { smile as "smile1" } from "./emojis.js";
export { "smile" as smile2 } from "./emojis.js";
export { "smile" as "smile3" } from "./emojis.js";
export { foo1, bar as "foo2" } from "./emojis.js";
export { foo3, bar as "foo4" };
export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" } from "Confucius";
export * as "foo", { default as "quux" } from "module-b";
export { "smile4" } from "./emojis.js";

=====================================output=====================================
export { smile as "smile1" } from "./emojis.js";
export { "smile" as smile2 } from "./emojis.js";
export { "smile" as "smile3" } from "./emojis.js";
export { foo1, bar as "foo2" } from "./emojis.js";
export { foo3, bar as "foo4" };
export {
  "學而時習之，不亦說乎？",
  "吾道一以貫之。" as "忠恕。",
} from "Confucius";
export * as "foo", { default as "quux" } from "module-b";
export { "smile4" } from "./emojis.js";

================================================================================
`;

exports[`module-string-names-import.js [meriyah] format 1`] = `
"[1:18]: Expected '}' (1:18)
> 1 | import { \\"default\\" as quotation1 } from \\"Confucius\\";
    |                  ^
  2 | import { \\"foo\\" as bar, \\"default\\" as qux } from \\"module-a\\";
  3 | import { \\"學而時習之，不亦說乎？\\" as quotation2 } from \\"Confucius\\";
  4 |"
`;

exports[`module-string-names-import.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { "default" as quotation1 } from "Confucius";
import { "foo" as bar, "default" as qux } from "module-a";
import { "學而時習之，不亦說乎？" as quotation2 } from "Confucius";

=====================================output=====================================
import { "default" as quotation1 } from "Confucius";
import { "foo" as bar, "default" as qux } from "module-a";
import { "學而時習之，不亦說乎？" as quotation2 } from "Confucius";

================================================================================
`;
